Now Created and Added a Footer Page and created another file named script.js where i migrated my all js code from index.html for more modualrity and management, more readability. and Implemented a Lenis.js for Smooth Scrolling and removed scroll-behaviour: smooth; from html,body css. to prevent the conflicts of lenis with css property. Now index.html project completed. will update tomorrow for next approach.

--- a/CSS/PROJECTS/01_CodingWallah_Frontend_Website_Clone/CSS/index.css
+++ b/CSS/PROJECTS/01_CodingWallah_Frontend_Website_Clone/CSS/index.css
@@ -162,7 +162,7 @@ main{
     margin-inline: var(--margin-inline-value);
     padding: 0 30px;
     color: #020817;
-    scroll-behavior: smooth;
+    /* scroll-behavior: smooth; */
 }
 
 section{
@@ -709,6 +709,7 @@ section{
     background-color: #ffffff00;
     background-color: white;
     background: linear-gradient(80deg, rgba(0, 0, 0, 0.55), transparent);
+    background: radial-gradient(#000000c4, #ff4500ab, grey);
     box-shadow: 0px 0px 50px black;
     position: absolute;
     top: 50%;
@@ -765,12 +766,13 @@ section{
     padding: 15px 15px;
     font-size: 16px;
     background-color: #F2F2F8;
+    background-color: #f2f2f870;
     transition-property: box-shadow, outline-color;
     transition-duration: 0.4s;
     transition-timing-function: ease;
 }
 #contact-us-form > .input-field > .input-area:hover,.input-area:focus{
-    box-shadow: 0px 10px 10px gray;
+    box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.299);
     outline-color: slateblue;
 }
 
@@ -807,4 +809,125 @@ section{
 }
 #contact-us-form > button:hover::after{
     left: 0;
+}
+
+
+
+/* CSS for Footer */
+footer{
+    padding: 1rem;
+}
+
+.navigations{
+    width: 100%;
+    background-color: whitesmoke;
+    border: none;
+    border-radius: 20px;
+    box-shadow:  20px 20px 50px gray;
+    
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-auto-rows: 1fr;
+    padding: 100px;
+}
+
+.navigations h3{
+    font-size: 1.5em;
+    margin-bottom: 20px;
+    font-weight: 500;
+}
+
+.navigations ul{
+    list-style-type: none;
+}
+.navigations ul > li{
+    margin-top: 12px;
+    cursor: pointer;
+    transition: color 400ms ease;
+}
+.navigations ul > li:hover{
+    color: orangered;
+}
+
+.navigations > .footer-navigations-grid-item4 > form{
+    margin-bottom: 20px;
+}
+
+.navigations > .footer-navigations-grid-item4 > form > input[type="email"]{
+    border: 0;
+    border-radius: 50px;
+    padding: 15px 30px;
+    display: block;
+    width: 100%;
+}
+
+.navigations > .footer-navigations-grid-item4 > form > input[type="email"]:focus{
+    outline: none;
+}
+
+.navigations > .footer-navigations-grid-item4 > form > button{
+    margin-top: 15px;
+    border: none;
+    border-radius: 50px;
+    padding: 15px 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-transform: uppercase;
+    font-size: 16px;
+    font-weight: bold;
+    background-color: black;
+    color: white;
+    width: 100%;
+    cursor: pointer;
+    position: relative;
+    overflow: hidden;
+    z-index: 0;
+}
+.navigations > .footer-navigations-grid-item4 > form > button::after{
+    content: "";
+    position: absolute;
+    top: -10%;
+    left: -120%;
+    width: 110%;
+    height: 110%;
+    border-color: transparent;
+    border-radius: inherit;
+    background-color: orangered;
+    transition: left 500ms ease;
+    z-index: -1;
+}
+.navigations > .footer-navigations-grid-item4 > form > button:hover::after{
+    left: 0%;
+    top: -5%;
+}
+
+.navigations > .footer-navigations-grid-item4 > ul{
+    display: flex;
+    align-items: center;
+    height: auto;
+    gap: 20px;
+}
+
+.navigations > .footer-navigations-grid-item4 > ul > li{
+    border: none;
+    border-radius: 50%;
+    padding: 5px;
+    background-color: black;
+    transition: background-color 400ms ease;
+    cursor: pointer;
+}
+.navigations > .footer-navigations-grid-item4 i{
+    font-size: large;
+    color: white;
+}
+.navigations > .footer-navigations-grid-item4 > ul > li:hover{
+    background-color: orangered;
+}
+
+footer .foot-bottom{
+    padding-block: 2rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
